--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -43,6 +44,12 @@
     "webpack-dev-server": "2.11.3",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
+  },
+  "devDependencies": {
+    "chokidar": "^2.0.4",
+    "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.2",
+    "react-docgen": "^2.21.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
