--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "chokidar": "^2.0.4",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
-    "react-docgen": "^2.21.0"
+    "react-docgen": "^2.21.0",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "prestart": "npm run gen:docs",
