--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -34,8 +36,10 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.5.2",
+    "react-addons-test-utils": "^15.6.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
+    "react-test-renderer": "^16.5.2",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
