--- a/package.json
+++ b/package.json
@@ -51,19 +51,23 @@
   },
   "devDependencies": {
     "chokidar": "^2.0.4",
+    "gh-pages": "^2.0.1",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "react-docgen": "^2.21.0",
     "styled-components": "^3.4.10"
   },
+  "homepage": "https://jalanya.github.io/react-creating-reusable-components/",
   "scripts": {
     "prestart": "npm run gen:docs",
     "start": "npm-run-all --parallel start:docs gen:docs-watch",
     "start:docs": "node scripts/start.js",
     "gen:docs": "node scripts/generateComponentData.js",
     "gen:docs-watch": "npm run gen:docs -- --watch",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "build:docs": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy:docs": "npm run build:docs",
+    "deploy:docs": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
