--- a/package.json
+++ b/package.json
@@ -50,11 +50,15 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "chokidar": "^2.0.4",
+    "cpx": "^1.5.0",
+    "cross-env": "^5.2.0",
     "gh-pages": "^2.0.1",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "react-docgen": "^2.21.0",
+    "rimraf": "^2.6.2",
     "styled-components": "^3.4.10"
   },
   "homepage": "https://jalanya.github.io/react-creating-reusable-components/",
@@ -66,8 +70,12 @@
     "gen:docs-watch": "npm run gen:docs -- --watch",
     "build:docs": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
+    "build:css": "cpx \"./src/components/**/*.css\" .lib",
+    "prebuild:lib": "rimraf lib",
+    "build:lib": "npm run build:commonjs && npm run build:css",
     "predeploy:docs": "npm run build:docs",
-    "deploy:docs": "gh-pages -d build"
+    "deploy:docs": "gh-pages -d build",
+    "build:commonjs": "cross-env NODE_ENV=production babel ./src/components --out-dir ./lib --ignore spec.js"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -105,6 +113,12 @@
   },
   "babel": {
     "presets": [
+      [
+        "env",
+        {
+          "modules": "commonjs"
+        }
+      ],
       "react-app"
     ]
   },
