--- a/package.json
+++ b/package.json
@@ -1,9 +1,32 @@
 {
   "name": "react-creating-reusable-components",
   "version": "0.1.0",
-  "private": true,
+  "main": "./lib/index.js",
+  "engines": {
+    "node": ">=4.0.0"
+  },
+  "author": {
+    "name": "Jose Alanya",
+    "email": "jose.alanya@gmail.com",
+    "url": "https://about.me/jose_alanya"
+  },
+  "files": [
+    "lib"
+  ],
+  "keywords": [
+    "components",
+    "react",
+    "react-component",
+    "toolkit"
+  ],
   "dependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "styled-components": "^3.4.10"
+  },
+  "devDependencies": {
     "autoprefixer": "7.1.6",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -12,6 +35,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "chokidar": "^2.0.4",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -27,7 +51,6 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
-    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -35,10 +58,8 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.5.2",
     "react-addons-test-utils": "^15.6.2",
     "react-dev-utils": "^5.0.2",
-    "react-dom": "^16.5.2",
     "react-test-renderer": "^16.5.2",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
@@ -47,19 +68,15 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.11.3",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "chokidar": "^2.0.4",
+    "whatwg-fetch": "2.0.3",
     "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "gh-pages": "^2.0.1",
+    "highlight.js": "^9.12.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "react-docgen": "^2.21.0",
-    "rimraf": "^2.6.2",
-    "styled-components": "^3.4.10"
+    "rimraf": "^2.6.2"
   },
   "homepage": "https://jalanya.github.io/react-creating-reusable-components/",
   "scripts": {
@@ -70,12 +87,13 @@
     "gen:docs-watch": "npm run gen:docs -- --watch",
     "build:docs": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "build:css": "cpx \"./src/components/**/*.css\" .lib",
+    "build:css": "cpx \"./src/components/**/*.css\" ./lib",
     "prebuild:lib": "rimraf lib",
     "build:lib": "npm run build:commonjs && npm run build:css",
     "predeploy:docs": "npm run build:docs",
     "deploy:docs": "gh-pages -d build",
-    "build:commonjs": "cross-env NODE_ENV=production babel ./src/components --out-dir ./lib --ignore spec.js"
+    "build:commonjs": "cross-env NODE_ENV=production babel ./src/components --out-dir ./lib --ignore spec.js",
+    "prepublish": "npm run build:lib"
   },
   "jest": {
     "collectCoverageFrom": [
